--- a/vidly/package.json
+++ b/vidly/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
+    "joi-browser": "^13.4.0",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
